todo lo que tengo hasta ahora

--- a/index.html
+++ b/index.html
@@ -3,10 +3,122 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="./css/styles.css">
+    <title>Explora el Cosmos</title>
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-    
+    <header class="mainHeader">
+        <section class="header">
+            <section>
+                <div>
+                    <ul class="explorar">
+                        <div>
+                            <li>
+                                <a href="#">Explorar</a>
+                            </li>
+                        </div>
+                        <div>
+                            <li>
+                                <a href="#">
+                                    <img src="./assets/img/iconos/flechitaAbajo.png" alt="flechitaAbajo">
+                                    <ul class="explorarVertical">
+                                        <li><a href="./pages/kepler.html">Kepler</a></li>
+                                        <li><a href="./pages/luna.html">Luna</a></li>
+                                        <li><a href="./pages/marte.html">Marte</a></li>
+                                        <li><a href="#">Europa</a></li>
+                                        <li><a href="#">Titán</a></li>
+                                    </ul>
+                                </a>
+                            </li>
+                        </div>
+                    </ul>
+                </div>
+            </section>
+            <section>
+                <div>
+                    <ul id="inicio">
+                        <li><a href="#"><img src="./assets/img/iconos/iconoEmpresa.png" alt="inicio"></a></li>
+                    </ul>
+                </div>
+            </section>
+            <section>
+                <div>
+                    <ul class="masInfo">
+                        <li><a href="#">Novedades</a></li>
+                        <li><a href="#">Nosotros</a></li>
+                        <li><a href="#">Galería</a></li>
+                    </ul>
+                </div>
+            </section>
+        </section>
+    </header>
+    <br>
+    <main>
+        <section class="titulo">
+            <div>
+                <h1>Explora
+                    <span>el cosmos</span>
+                </h1>
+                <h3>de una manera segura.</h3>
+            </div>
+        </section>
+        <section>
+            <div id="destinos">
+                <h3>Destinos</h3>
+            </div>
+            <section class="contenedor-cards">
+                <article class="card">
+                    <a href="./pages/kepler.html"><img src="./assets/img/cards/keplercard.png" alt="keplercard"></a>
+                </article>
+                <article class="card">
+                    <a href="./pages/luna.html"><img src="./assets/img/cards/lunacard.png" alt="luna"></a>
+                </article>
+                <article class="card">
+                    <a href="./pages/marte.html"><img src="./assets/img/cards/martecard.png" alt="martecard"></a>
+                </article>
+                <article class="card">
+                    <a href="#titan"><img src="../assets/img/cards/titancard.png" alt="titancard"></a>
+                </article>
+                <article class="card">
+                    <a href="#europa"><img src="./assets/img/cards/europacard.png" alt="europacard"></a>
+                </article>
+            </section>
+        </section>
+    </main>
+    <footer id="mainFooter">
+        <section class="footer">
+            <section>
+                <div>
+                    <ul>
+                        <li>Póngase en contacto</li>
+                        <li class="dt">Ginger.Ferry@gmail.com</li>
+                        <li class="dt">540-653-7422 x6238</li>
+                    </ul>
+                </div>
+                <div>
+                    <img src="./assets/img/iconos/divisor.png" alt="">
+                </div>
+                <div>
+                    <ul>
+                        <li><a href="#preguntasFrecuentes"><h4>Preguntas frecuentes</h4></a></li>
+                        <li><a href="#terminosCondiciones"><h4>Términos y condiciones</h4></a></li>
+                        <li><a href="#politicaPrivacidad"><h4>Política de privacidad</h4></a></li>
+                    </ul>
+                </div>
+            </section>
+            <section>
+                <h4>Redes sociales
+                    <div>
+                        <ul class="iconosRedes">
+                            <li><a href="https://www.youtube.com/" target="_blank"><img src="./assets/img/iconos/youtube.png" alt="youtube"></a></li>
+                            <li><a href="https://www.instagram.com/" target="_blank"><img src="./assets/img/iconos/instagram.png" alt="instagram"></a></li>
+                            <li><a href="https://x.com/home" target="_blank"><img src="./assets/img/iconos/x.png" alt="x"></a></li>
+                            <li><a href="https://www.facebook.com/" target="_blank"><img src="./assets/img/iconos/facebook.png" alt="facebook"></a></li>
+                        </ul>
+                    </div>
+                </h4>
+            </section>
+        </section>
+    </footer>
 </body>
 </html>
