--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                     <a href="./pages/marte.html"><img src="./assets/img/cards/martecard.png" alt="martecard"></a>
                 </article>
                 <article class="card">
-                    <a href="#titan"><img src="../assets/img/cards/titancard.png" alt="titancard"></a>
+                    <a href="#titan"><img src="./assets/img/cards/titancard.png" alt="titancard"></a>
                 </article>
                 <article class="card">
                     <a href="#europa"><img src="./assets/img/cards/europacard.png" alt="europacard"></a>
