--- a/index.html
+++ b/index.html
@@ -52,9 +52,8 @@
             </section>
         </section>
     </header>
-    <br>
     <main>
-        <section class="titulo">
+        <section class="main-title">
             <div>
                 <h1>Explora
                     <span>el cosmos</span>
@@ -62,8 +61,34 @@
                 <h3>de una manera segura.</h3>
             </div>
         </section>
-        <section>
-            <div id="destinos">
+        <section class="quienes-somos">
+            <section class="us"> 
+                <div>
+                    <h3>Sobre nosotros</h3>
+                </div>
+                <div>
+                    <h4>Conocer</h4>
+                    <img src="./assets/img/iconos/masDestinos.png" alt="icono de mas">
+                </div>
+            </section>
+            <section>
+                <article class="foto-1">
+                    <img src="./assets/img/galeria/descarga (1).png" alt="imagen de satelite 1">
+                </article>
+                <article class="texto-us">
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
+                        Neque dolorem ea ex voluptatibus eaque iste nu
+                        lla, ab asperiores vero a blanditiis alias voluptatum i
+                        ure dignissimos facere repellendus mollitia, illo vel.
+                    </p>
+                </article>
+                <article class="foto-2">
+                    <img src="./assets/img/galeria/descarga.png" alt="imagen de satelite 2">
+                </article>
+            </section>
+        </section>
+            </div>
+            <div class="main-text">
                 <h3>Destinos</h3>
             </div>
             <section class="contenedor-cards">
