añade etiquetas css para secciones y títulos genéricos, avanzo con sección quiénes somos

--- a/index.html
+++ b/index.html
@@ -54,41 +54,44 @@
     </header>
     <main>
         <section class="main-title">
-            <div>
+            <div class="explora-el-cosmos-block">
                 <h1>Explora
                     <span>el cosmos</span>
                 </h1>
                 <h3>de una manera segura.</h3>
             </div>
         </section>
-        <section class="quienes-somos">
-            <section class="us"> 
+        <section class="main-section">
+            <section class="us">
                 <div>
                     <h3>Sobre nosotros</h3>
                 </div>
-                <div>
+                <div class="conocer-mas">
                     <h4>Conocer</h4>
                     <img src="./assets/img/iconos/masDestinos.png" alt="icono de mas">
                 </div>
             </section>
-            <section>
-                <article class="foto-1">
+            <section class="fotos">
+                <article>
                     <img src="./assets/img/galeria/descarga (1).png" alt="imagen de satelite 1">
                 </article>
-                <article class="texto-us">
+                <article>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
                         Neque dolorem ea ex voluptatibus eaque iste nu
                         lla, ab asperiores vero a blanditiis alias voluptatum i
                         ure dignissimos facere repellendus mollitia, illo vel.
                     </p>
                 </article>
-                <article class="foto-2">
+                <article>
                     <img src="./assets/img/galeria/descarga.png" alt="imagen de satelite 2">
                 </article>
             </section>
         </section>
-            </div>
-            <div class="main-text">
+        <section class="main-title">
+            <!-- acá iría otro título -->
+        </section>
+        <section class="main-section">
+            <div class="destinos-text">
                 <h3>Destinos</h3>
             </div>
             <section class="contenedor-cards">
