hice de todo menos crear la nueva sección de quiénes somos

--- a/index.html
+++ b/index.html
@@ -58,41 +58,23 @@
                 <h1>Explora
                     <span>el cosmos</span>
                 </h1>
-                <h3>de una manera segura.</h3>
+                <h3>Explora los planetas del sistema solar con la última tecnología aeroespacial 
+                    — los valles de Marte, los cráteres de la Luna, las vistas de Titán, los misteriosos océanos de
+                    Europa, ¡y mucho más! — la era de los viajes espaciales en un solo <span>click</span>.</h3>
             </div>
-        </section>
-        <section class="main-section">
-            <section class="us">
-                <div>
-                    <h3>Sobre nosotros</h3>
-                </div>
-                <div class="conocer-mas">
-                    <h4>Conocer</h4>
-                    <img src="./assets/img/iconos/masDestinos.png" alt="icono de mas">
-                </div>
-            </section>
-            <section class="fotos">
-                <article>
-                    <img src="./assets/img/galeria/descarga (1).png" alt="imagen de satelite 1">
-                </article>
-                <article>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
-                        Neque dolorem ea ex voluptatibus eaque iste nu
-                        lla, ab asperiores vero a blanditiis alias voluptatum i
-                        ure dignissimos facere repellendus mollitia, illo vel.
-                    </p>
-                </article>
-                <article>
-                    <img src="./assets/img/galeria/descarga.png" alt="imagen de satelite 2">
-                </article>
-            </section>
-        </section>
-        <section class="main-title">
-            <!-- acá iría otro título -->
+            <div class="explora-el-cosmos-block">
+                <button>Comprar pasaje</button>
+            </div>
         </section>
         <section class="main-section">
             <div class="destinos-text">
                 <h3>Destinos</h3>
+            </div>
+            <div class="conocer-mas">
+                <a href="">
+                    <h3>Conocer</h3>
+                    <img src="./assets/img/iconos/masDestinos.png" alt="icono de mas">
+                </a>
             </div>
             <section class="contenedor-cards">
                 <article class="card">
