--- a/index.html
+++ b/index.html
@@ -66,8 +66,11 @@
                 <button>Comprar pasaje</button>
             </div>
         </section>
+        <div class="divisor">
+            <img src="./assets/img/iconos/divisor2.png" alt="">
+        </div>
         <section class="main-section">
-            <div class="destinos-text">
+            <div class="seccion-text">
                 <h3>Destinos</h3>
             </div>
             <div class="conocer-mas">
@@ -93,6 +96,14 @@
                     <a href="#europa"><img src="./assets/img/cards/europacard.png" alt="europacard"></a>
                 </article>
             </section>
+        </section>
+        <div class="divisor">
+            <img src="./assets/img/iconos/divisor2.png" alt="">
+        </div>
+        <section class="main-section">
+            <div class="seccion-text">
+                <h3>Galería</h3>
+            </div>
         </section>
     </main>
     <footer id="mainFooter">
