cambios en la sección de landing page

--- a/index.html
+++ b/index.html
@@ -66,9 +66,6 @@
                 <button>Comprar pasaje</button>
             </div>
         </section>
-        <div class="divisor">
-            <img src="./assets/img/iconos/divisor2.png" alt="">
-        </div>
         <section class="main-section">
             <div class="seccion-text">
                 <h3>Destinos</h3>
@@ -97,12 +94,12 @@
                 </article>
             </section>
         </section>
-        <div class="divisor">
-            <img src="./assets/img/iconos/divisor2.png" alt="">
-        </div>
-        <section class="main-section">
-            <div class="seccion-text">
-                <h3>Galería</h3>
+        <section class="main-title">
+            <div class="multimedia">
+                <h1>Multimedia</h1>
+                <h3>¡Conozca nuestras imágenes y videos tomados por nuestros telescopios
+                    infrarrojos durante los vuelos espaciales!
+                </h3>
             </div>
         </section>
     </main>
