creación de la sección galería

--- a/index.html
+++ b/index.html
@@ -67,13 +67,10 @@
             </div>
         </section>
         <section class="main-section">
-            <div class="seccion-text">
-                <h2>Destinos</h2>
-            </div>
             <div class="conocer-mas">
                 <a href="">
-                    <h3>Conocer</h3>
                     <img src="./assets/img/iconos/masDestinos.png" alt="icono de mas">
+                    <h1>Destinos</h1>
                 </a>
             </div>
             <section class="contenedor-cards">
@@ -102,7 +99,7 @@
                 </h3>
             </section>
         </section>
-        <section class="main-section">
+        <section class="grids-2">
             <section class="grids">
                 <div class="s1">
                     <img src="./assets/img/imagenes-seleccionadas/buceo.png" alt="">
@@ -120,6 +117,12 @@
                     <img src="./assets/img/imagenes-seleccionadas/vista.png" alt="">
                 </div>
             </section>
+            <div class="galeria-completa">
+                <h1>Explore la galería completa</h1>
+                <a href="">
+                    <img src="./assets/img/iconos/masDestinos.png" alt="icono de mas">
+                </a>
+            </div>
         </section>
     </main>
     <footer id="mainFooter">
